--- a/bismark/docker/Dockerfile.mock
+++ b/bismark/docker/Dockerfile.mock
@@ -4,7 +4,7 @@
 # Outputs mock NDJSON events without calling the real Claude API.
 #
 # Build: ./build-mock.sh
-# Run: docker run --rm -e BISMARK_TASK_ID=test-1 bismark-agent-mock:test
+# Run: docker run --rm -e BISMARCK_TASK_ID=test-1 bismark-agent-mock:test
 
 FROM node:20-alpine
 
